--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -21,7 +21,7 @@
 }
 
 .login-wrapper {
-    background-color: var(--beige);
+    background-color: var(--white);
     padding: 1rem;
     border-radius: 0.3rem;
     box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.1);
