--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,10 +1,17 @@
 .navbar {
+    box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.navbar-wrapper {
     background-color: var(--white);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    box-shadow: 0px 2px 7px 1px rgba(0, 0, 0, 0.1);
     position: relative;
 }
 
