--- a/src/styles/userprofile.css
+++ b/src/styles/userprofile.css
@@ -23,8 +23,9 @@
     box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    height: min-content;
     width: var(--profile-picture-size);
+
 }
 
 .data-wrapper {
