--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -59,3 +59,17 @@ button {
     width: min-content;
     white-space: nowrap;
 }
+
+
+
+.error-wrapper {
+    position: relative;
+}
+
+.error {
+    position: absolute;
+    top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
