--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -60,6 +60,11 @@ button {
     white-space: nowrap;
 }
 
+.interface {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 
 .error-wrapper {
