--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,12 +2,16 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Castoro Titling', cursive;
+    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Castoro Titling', cursive; */
 }
 
 p {
     font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'Castoro Titling', cursive;
 }
 
 :root {
