--- a/src/styles/userprofile.css
+++ b/src/styles/userprofile.css
@@ -1,11 +1,10 @@
 .user-profile-page {
-    background-color: var(--beige);
+    background-color: var(--white);
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    position: relative;
 }
 
 .content {
@@ -32,6 +31,11 @@
     padding: 1rem;
 }
 
+.label {
+    display: flex;
+    gap: 0.5rem;
+}
+
 .profile-picture {
     width: var(--profile-picture-size);
     height: var(--profile-picture-size);
@@ -40,6 +44,6 @@
 
 .name {
     font-weight: 700;
-    color: var(--green);
+    /* color: var(--green); */
     font-size: 24px;
 }
